syntax= "proto3";

option go_package= "github.com/flydevs/chat-app-api/users-api/src/clients/rpc";

service MessagingProtoInterface{
    rpc CreateConversation(Conversation) returns (Svr_msg) {}
    rpc GetConversation(Uuid) returns (ConvMessageResponse) {}
    rpc CreateMessage(Message) returns (Svr_msg) {}
    rpc GetMessages(MessageRequest) returns (stream Message){}
    rpc CreateUserConversation(UserConversation) returns (Svr_msg) {}
    rpc GetUserConversations(Uuid) returns (stream UserConversation) {}
 }

message UserConversation{
    Uuid user_uuid =1;
    Uuid conversation_uuid=2;
    int64 LastAccessAt = 3;
}

message Conversation{
    Uuid uuid =1;
    int32 type =2;
    int64 created_at= 3;
    int64 updated_at= 4;
    string name =5;
    string description =6;
    string avatar_url=7;
}

message Message{
    Uuid uuid =1;
    string conversation_uuid =2;
    string author_uuid=3;
    string text=4;
    int64 created_at=5;
    int64 updated_at=6;
}

message Svr_msg{
    int32 status=1;
    string message=2;
}

message ConvMessageResponse{
    Conversation convo =1;
    Svr_msg msg =2;
}

message MessageRequest{
    Uuid uuid =1;
    Uuid last_message_id=2;
}

message Uuid {
    string uuid =1;
}